# unsys_staking

./: .gitignore  Anchor.toml  README.md  devnet-addresses.json  mainnet-addresses.json  package-lock.json  package.json
cli/: README.md  package-lock.json  package.json
cli/src/: index.ts
cli/src/lib/: client.ts  config.ts
idl/: unsys_staking.json  unsys_staking.ts
keys/: README.md
migrations/: deploy.ts
programs/unsys_staking/: Cargo.toml
programs/unsys_staking/src/: lib.rs
scripts/: convert-private-key.ts  devnet-full-test.ts  devnet-smoke-test.ts  generate-keypair.ts  mainnet-init.ts
tests/: unsys_staking.ts
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: DataProviderStaking.tsx  DividendStaking.tsx  Header.tsx  PartnershipStaking.tsx  StatsCard.tsx  WalletProvider.tsx
web/src/hooks/: useGlobalConfig.ts  useUserStakes.ts
web/src/lib/: constants.ts  okx-wallet-adapter.ts  program.ts  transactions.ts
